# User_Management

./: .env.example  .gitignore  README.md  alembic.ini  auth.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  user_management.db
alembic/: env.py
alembic/versions/: a678bc6365f8_create_users_table.py  b4b8d8e6f1a1_add_password_hash_to_users.py
app/: auth.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/routers/: auth.py  users.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
tests/: test_app.py
